--- a/styles.css
+++ b/styles.css
@@ -107,8 +107,8 @@ html, body {
 }
 
 footer {
-    background-color: #153448;
-    color: #15344877;
+    background-color: #f8f9fa;
+    color: #8e9da7;
     text-align: center;
     padding: 10px 0;
     /* position: relative; */
